# stylus_noir_mixer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
circuits/src/: imt.nr  main.nr
contracts/: Cargo.toml
contracts/common/: Cargo.toml
contracts/common/src/: errors.rs
contracts/imt/: Cargo.toml
contracts/imt/.cargo/: config.toml
contracts/imt/src/: interface.rs  lib.rs  main.rs
contracts/imt/tests/: imt.rs
contracts/imt/tests/abi/: mod.rs
contracts/js-scripts/: merkleTree.js
contracts/mixer/: Cargo.toml  foundry.toml  rust-toolchain.toml
contracts/mixer/src/: Verifier.sol  interface.rs  lib.rs  main.rs
contracts/mixer/tests/: mixer.rs  t_mixer.rs
contracts/mixer/tests/abi/: mod.rs
contracts/poseidon/: Cargo.toml
contracts/poseidon/.cargo/: config.toml
contracts/poseidon/src/: abi.rs  interface.rs  lib.rs  main.rs  params.rs  sponge.rs
contracts/poseidon/tests/: poseidon2.rs
contracts/poseidon/tests/abi/: mod.rs
contracts/poseidon2/: Cargo.toml  rust-toolchain.toml
contracts/poseidon2/.cargo/: config.toml
contracts/poseidon2/src/: lib.rs  main.rs
contracts/poseidon2/tests/: t_poseidon2.rs
contracts/src/: errors.rs  imt.rs  lib.rs  main.rs  mixer.rs
scripts/: check.sh
scripts/js/: commitment.out  generateCommitment.ts  generateProof.ts  merkleTree.js  proof.out
src/: imt.rs  incremental_merkle_tree.rs  lib.rs  main.rs  mixer.rs  poseidon2.rs
tests/: t_poseidon2.rs
