[package]
name = "stylus-imt"
authors = ["Fig"]
edition.workspace = true
license.workspace = true
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk = { workspace = true, features = ["debug"] }
alloy-sol-types.workspace = true
stylus-common = { path = "../common" }
openzeppelin-poseidon = { path = "../poseidon", default-features = false }

[dev-dependencies]
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true

[features]
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-imt"
path = "src/main.rs"

[lib]
crate-type = ["lib","cdylib"]
