[package]
name = "stylus-imt"
authors = ["Fig"]
edition.workspace = true
license.workspace = true
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-common = { path = "../common" }
openzeppelin-poseidon = { path = "../poseidon", default-features = false }

[dev-dependencies]
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true

[features]
default = ["contract"]
contract = []
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-imt"
path = "src/main.rs"

[lib]
crate-type = ["lib","cdylib"]

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds