[package]
name = "stylus-imt"
authors = ["Fig"]
edition.workspace = true
license.workspace = true
version = "0.1.0"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-common = { path = "../common" }
openzeppelin-poseidon = { path = "../poseidon", default-features = false }

[dev-dependencies]
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["contract"]
contract = []
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-imt"
path = "src/main.rs"

[lib]
crate-type = ["lib","cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true