[package]
name = "stylus-mixer"
edition.workspace = true
license.workspace = true
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk.workspace = true
alloy-sol-types.workspace = true

stylus-common = { path = "../common" }
stylus-imt = { path = "../imt" }

[dev-dependencies]
eyre.workspace = true
tokio.workspace = true

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-mixer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
