[package]
name = "stylus-mixer"
edition.workspace = true
license.workspace = true
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk.workspace = true
alloy-sol-types.workspace = true

stylus-common = { path = "../common" }
stylus-imt = { path = "../imt", default-features = false }

[dev-dependencies]
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-mixer"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]