[package]
name = "openzeppelin-poseidon"
edition.workspace = true
license.workspace = true
version = "0.0.1"

[dependencies]
openzeppelin-crypto.workspace = true
alloy-primitives.workspace = true
stylus-sdk.workspace = true


[dev-dependencies]
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["contract"]
contract = []
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "openzeppelin-poseidon"
path = "src/main.rs"