[package]
name = "stylus_poseidon2"
version = "0.0.1"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
hex = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false, features = ["scalar_field"] }
ark-ff = { version = "0.4", default-features = false }

[dev-dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
dotenv = "0.15.0"

[features]
default = []
contract = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus_poseidon2"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "z"
